k8s/addons/anythingllm/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: anythingllm
  namespace: anythingllm
spec:
  parentRefs:
    - name: envoy-ai-gateway-basic
      namespace: envoy-ai-gateway-system
      sectionName: http
  hostnames:
    - ui.zer0.garden
  rules:
    - backendRefs:
        - name: anythingllm
          port: 80
